tests/NormalTests/paczka1/fuzzy1/27254203.err
Error in line 11: A711 S108 47,1
Error in line 21: Nk4J S108 33,1
Error in line 17: rBMysf S108 93,0
Error in line 5: QLvH S108 87,4
Error in line 30: ddqv2sqyf S246 92,6
